2008-11-23  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/symbols.c:
   Fix wrong menu item labels in the symbol list popup menu.


2008-11-22  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * THANKS: Added Andrew Drynov to list of supports of Russian translation


2008-11-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/main.c:
   Try to fix some problems when opening files with non-Ascii characters
   on Windows from the command line.
 * plugins/export.c, plugins/saveactions.c, src/callbacks.c,
   src/plugindata.h, src/plugins.c, src/utils.c:
   Attempt to make utils_get_date_time() UTF-8 safe and add it to the
   plugin API.
   Fix misnamed str_casecmp() function in the plugin API, sorry.
 * src/editor.c, src/templates.c, src/templates.h:
   Make templates_replace_all() working on GStrings to fix various
   string replacement problems when using custom file templates.


2008-11-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/symbols.c:
   Add Expand/Collapse All symbol list popup menu items.
   Disable symbol list sort items when there are no tags.
 * src/ui_utils.h, src/plugindata.h, src/plugins.c, src/symbols.c,
   src/ui_utils.c, plugins/filebrowser.c, plugins/classbuilder.c:
   Add function ui_image_menu_item_new() to the plugin API, to easily
   create a menu item with a stock image and a custom label.
 * data/html_entities.tags, THANKS:
   Update from file made by Tyler D'Agosta (thanks). This version
   includes all character entities defined by HTML 2.0, HTML 3.2, and
   HTML 4.0, and one (&apos;) defined in XHTML 1.0.
 * src/plugins.c, src/main.c:
   Create geany_object in main.c so core functions can use it even
   when plugins are disabled.
 * src/project.c, src/callbacks.c, src/document.c, src/editor.c:
   Remove now-unnecessary checks for geany_object != NULL.


2008-11-20  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/documentprivate.h, src/symbols.c: